frontend/frontend-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: frontend
spec:
  to:
    kind: Service
    name: frontend-svc
    weight: 100
  port:
    targetPort: frontend-svc
  wildcardPolicy: None
